<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="371dp"
        android:layout_height="474dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <ImageView
                  android:layout_width="55dp"
                  android:layout_height="46dp"
                  android:src="@drawable/persona"
                  android:layout_marginTop="20dp"/>

              <EditText
                  android:id="@+id/nombretxt"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="25dp"
                  android:layout_marginLeft="25dp"
                  android:layout_marginTop="20dp"
                  android:autofillHints=""
                  android:ems="10"
                  android:hint="@string/nombre"
                  android:inputType="textPersonName" />

          </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icotel"
                android:layout_width="50dp"
                android:layout_height="33dp"

                app:srcCompat="@drawable/telefo" />

            <EditText
                android:id="@+id/telefonotxt"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:src="@drawable/coreo" />

            <EditText
                android:id="@+id/emailtxt"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />


        </LinearLayout>


        <EditText
            android:id="@+id/desctxt"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/fecha"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/fechsSelec"
            android:layout_marginTop="35dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="277dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:text="@string/butn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>





